--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: auto 0;
+  height: 100vh;
+}
+
+.svg-inline--fa {
+  text-shadow: 1px 1px 1px #ccc;
+  font-size: 4em;
+}
+
+.btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 2px;
+  padding: 5px;
+  background-color: #ccc;
+  color: rgba(0, 0, 0, 0.75);
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.75);
+  transition: 0.5s;
+}
+
+.btn:hover {
+  transform: translate(0, -3px);
+  box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
