--- a/src/index.css
+++ b/src/index.css
@@ -16,21 +16,28 @@
 
 .svg-inline--fa {
   text-shadow: 1px 1px 1px #ccc;
-  font-size: 4em;
+  font-size: 10em;
 }
 
 .btn {
   cursor: pointer;
   border: none;
-  border-radius: 2px;
+  border-radius: 20px;
   padding: 5px;
+  width: 250px;
+  height: 100px;
   background-color: #ccc;
   color: rgba(0, 0, 0, 0.75);
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.75);
   transition: 0.5s;
+  font-size: 25px;
 }
 
 .btn:hover {
   transform: translate(0, -3px);
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.75);
+}
+
+.name {
+  font-size: 50px;
 }
